Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38820

Mac: print dialog doesn't open anymore after printing to pdf

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.5.0 Beta
    • 5.3.0 RC1, 5.5.0 Beta
    • GUI: Printing
    • None
    • macOS
    • 92ea91836eedcf34e09df6b2bd3c

      Using qt-enterprise-mac-x64-android-ios-5.3.0-RC_2014-05-07_00-16-56-70.dmg

      • Open Qt Creator or Qt Assistant
      • Open the print dialog File->Print
      • Choose Pdf->Save as pdf

      The file/text is printed to pdf as expected

      • Try opening the print dialog again
        => problem, the dialog does not open

      You need to close/reopen the application for the print dialog to open again.

        For Gerrit Dashboard: QTBUG-38820
        # Subject Branch Project Status CR V

            johnlayt John Layt
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes